# real-estate-ml-api

./: PRD.md  README.md  pyproject.toml
app/: main.py
app/schemas/: house.py  training.py
data/: housing.csv
model/: train_model.py
